--- a/BlazorMarkdig/Client/wwwroot/css/MarkdigEditor.css
+++ b/BlazorMarkdig/Client/wwwroot/css/MarkdigEditor.css
@@ -1,12 +1,13 @@
 ﻿.me-btn {
     border-radius: 0.25rem;
     border: solid 1px rgba(0,0,0,0.5);
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+    box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
     padding: 0.25rem 0.125rem;
     font-size: 1rem;
     line-height: 1.5;
     color: #000;
     background: linear-gradient(#eee, #fff, #eee, #ccc);
-    margin: 1px;
     min-width:2rem;
+    min-height: 2rem;
+    vertical-align:middle;
 }
