File upload working!  Template injected with URL of uploaded image.

--- a/BlazorMarkdig/Client/Components/MarkdigEditor.razor
+++ b/BlazorMarkdig/Client/Components/MarkdigEditor.razor
@@ -15,6 +15,7 @@
 
             @* left this in 'raw' to allow you to compare with the component usage above. *@
             <button class="me-btn oi oi-link-intact" title="Link url" @onclick="@(()=> this.PasteTemplate("\r\n[text](http://)", caretOffset:1))" />
+            <FileUploadButton />
 
         </CascadingValue>
     </div>
