--- a/BlazorMarkdig/Client/_Imports.razor
+++ b/BlazorMarkdig/Client/_Imports.razor
@@ -5,9 +5,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorMarkdig.Client
-@using BlazorMarkdig.Client.Shared
 
+@using BlazorInputFile
+@using BlazorMarkdig.Client
 @using BlazorMarkdig.Client.Classes.CodeServices
 @using BlazorMarkdig.Client.Components
-@using BlazorInputFile
+@using BlazorMarkdig.Client.Hubs
+@using BlazorMarkdig.Client.Shared
