--- a/BlazorMarkdig/Client/wwwroot/css/MarkdigEditor.css
+++ b/BlazorMarkdig/Client/wwwroot/css/MarkdigEditor.css
@@ -1,4 +1,5 @@
-﻿.me-btn {
+﻿/* me = Markdig Editor */
+.me-btn {
     border-radius: 0.25rem;
     border: solid 1px rgba(0,0,0,0.5);
     box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
@@ -7,7 +8,11 @@
     line-height: 1.5;
     color: #000;
     background: linear-gradient(#eee, #fff, #eee, #ccc);
-    min-width:2rem;
-    min-height: 2rem;
+    min-width:2.25rem;
+    min-height: 2.25rem;
     vertical-align:middle;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
